--- a/.github/workflows/main_ai-image-detection.yml
+++ b/.github/workflows/main_ai-image-detection.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Create and start virtual environment
         run: |
-          cd ${{ AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+          cd ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
           python -m venv venv
           source venv/bin/activate
 
@@ -38,7 +38,7 @@ jobs:
       # Optional: Add step to run tests here
 
       - name: Zip artifact for deployment
-        run: zip release.zip ${{ AZURE_FUNCTIONAPP_PACKAGE_PATH }}/* -r
+        run: zip release.zip ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
