--- a/.github/workflows/main_ai-image-detection.yml
+++ b/.github/workflows/main_ai-image-detection.yml
@@ -33,7 +33,9 @@ jobs:
           source venv/bin/activate
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          cd ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+          pip install -r requirements.txt
 
       # Optional: Add step to run tests here
 
