--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,33 @@
 {
-  "manifest_version": 3,
-  "name": "OpenID Auth Extension",
-  "version": "1.0",
-  "description": "Chrome extension for OpenID authentication with auth.demortes.com.",
-  "permissions": ["identity", "storage"],
-  "background": {
-    "service_worker": "background.js"
-  },
-  "action": {
-    "default_popup": "popup.html",
-    "default_icon": {
-      "16": "images/icon16.png",
-      "48": "images/icon48.png",
-      "128": "images/icon128.png"
-    }
-  }
+    "manifest_version": 3,
+    "name": "AI Image Detection",
+    "description": "Simple extension to detect AI images.",
+    "version": "0.0.1",
+    "icons": {
+        "16": "images/icon-16.jpg",
+        "32": "images/icon-32.jpg",
+        "48": "images/icon-48.jpg",
+        "128": "images/icon-128.jpg"
+    },
+    "action": {
+        "default_popup": "popup.html",
+        "default_icon": {
+            "16": "images/icon-16.jpg",
+            "32": "images/icon-32.jpg",
+            "48": "images/icon-48.jpg",
+            "128": "images/icon-128.jpg"
+        }
+    },
+    "background": {
+        "service_worker": "background.js"
+    },
+    "permissions": [
+        "identity",
+        "storage"
+    ],
+    "host_permissions": [
+        "https://facebook.com/*",
+        "https://www.facebook.com/*",
+        "https://m.facebook.com/*"
+    ]
 }
