--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,21 @@
 {
     "manifest_version": 3,
     "name": "AI Image Detection",
-    "description": "Simple extension to detect AI images.",
+    "description": "A Chrome extension that detects and identifies AI-generated images on web pages, helping users distinguish between real and synthetic content.",
     "version": "0.0.1",
     "icons": {
-        "16": "images/icon-16.jpg",
-        "32": "images/icon-32.jpg",
-        "48": "images/icon-48.jpg",
-        "128": "images/icon-128.jpg"
+        "16": "images/icon-16.png",
+        "32": "images/icon-32.png",
+        "48": "images/icon-48.png",
+        "128": "images/icon-128.png"
     },
     "action": {
         "default_popup": "popup.html",
         "default_icon": {
-            "16": "images/icon-16.jpg",
-            "32": "images/icon-32.jpg",
-            "48": "images/icon-48.jpg",
-            "128": "images/icon-128.jpg"
+            "16": "images/icon-16.png",
+            "32": "images/icon-32.png",
+            "48": "images/icon-48.png",
+            "128": "images/icon-128.png"
         }
     },
     "background": {
